// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas del componente <GifGrid />> Debe de mostrar items cuando se cargar imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Samurai X
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="123"
      key="123"
      title="cualquierCosa.jpg"
      url="https://localhost.com"
    />
    <GifGridItem
      id="456"
      key="456"
      title="cualquierCosa.jpg"
      url="https://localhost.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas del componente <GifGrid />> Debe mostrarse correctamente el componente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Samurai X
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
